# bevy-codex

./: Cargo.toml  README.md
assets/: game_settings.ron
examples/basic/: main.rs
examples/hud/: main.rs
src/: events.rs  lib.rs  resources.rs  systems.rs
src/hud/: components.rs  mod.rs  systems.rs
src/loading/: components.rs  mod.rs  styles.rs  systems.rs
src/main_menu/: components.rs  mod.rs  systems.rs
src/pause/: components.rs  mod.rs  systems.rs
src/settings/: components.rs  mod.rs  resources.rs  styles.rs  systems.rs
src/splash/: components.rs  mod.rs  systems.rs
src/widgets/: mod.rs
src/widgets/button/: components.rs  mod.rs  styles.rs  systems.rs
src/widgets/list/: components.rs  mod.rs  systems.rs
src/widgets/panel/: components.rs  mod.rs  systems.rs
src/widgets/slider/: components.rs  mod.rs  systems.rs
src/widgets/status_bar/: components.rs  mod.rs  systems.rs
