[package]
name = "bevy-codex"
version = "0.6.2"
description = "A manager for menus and huds with the bevy game engine"
repository = "https://github.com/KyleWinston/bevy-codex"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = true
keywords = ["bevy", "menus", "ui"]
exclude = ["/examples"]

[dependencies]
serde = "1.0.99"
bevy = { version = "0.14.2", default-features = false, features = [
    "bevy_asset",
    "bevy_state",
    "bevy_core_pipeline",
    "png",
] }
bevy-settings = "0.6.0"
bevy_lunex = "0.2.3"
bevy_splash_screen = { git = "https://github.com/KyWinston/bevy_splash_screen", branch = "main" }
bevy_tweening = { git = "https://github.com/SergioRibera/bevy_tweening", branch = "infinite_mirrored" }
# bevy_splash_screen = "0.6.0"

[dev-dependencies]
cargo-husky = { version = "1", features = [
    "precommit-hook",
    "run-cargo-test",
    "run-cargo-clippy",
] }
# bevy_splash_screen = { version = "0.6.0", features = ["dev"] }
bevy_splash_screen = { git = "https://github.com/KyWinston/bevy_splash_screen", branch = "main" }
[target.'cfg(target_os = "linux")'.dev-dependencies.bevy]
version = "0.14.2"
features = ["x11", "wayland"]
default-features = false

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
strip = true
